updated css for buttons, fixed some css aligning issues

--- a/c2g1_project/src/styles/clienthomepage.css
+++ b/c2g1_project/src/styles/clienthomepage.css
@@ -27,7 +27,8 @@
   color: #0672cb;
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
   transition: background-color 500ms, box-shadow 500ms;
 }
 
@@ -43,9 +44,10 @@
   color: #0672cb;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   align-items: center;
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
   transition: background-color 500ms, box-shadow 500ms;
 }
 
@@ -116,9 +118,9 @@
 }
 
 .workshop-detail-panel span {
-  white-space: nowrap; 
-  overflow: hidden; 
-  text-overflow: ellipsis; 
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-weight: bold;
   max-width: 200px;
   margin-right: auto;
@@ -176,7 +178,7 @@
 .ws_req_form_group input::placeholder,
 .ws_req_form_group textarea::placeholder,
 .ws_req_form_group select::placeholder {
-  text-align: center; 
+  text-align: center;
 }
 
 .ws_req_form_workshop_id {
@@ -260,17 +262,20 @@
   grid-row-start: 10;
   grid-column: 1 / span 2;
   display: flex;
-  justify-content: center; 
-  margin-top: 10px; 
+  justify-content: center;
+  margin-top: 10px;
 }
 
-.ws_req_submit_button, .refresh_button, .acknowledge_button, .popwsreqbut, .clear-button-design {
+.ws_req_submit_button,
+.refresh_button,
+.acknowledge_button,
+.popwsreqbut,
+.clear-button-design {
   color: black;
   width: 150px;
   height: 50px;
-  border-radius: 25px;
-  border-width: 0px;
-  font-size: 14px;
+  border-style: solid;
+  font-size: 16px;
   font-weight: bold;
   padding: 10px 10px;
   transition: background-color 500ms;
@@ -282,14 +287,27 @@
   align-self: center;
   margin-left: 20px;
   margin-right: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background-color: #eef8ff;
 }
 
 .clear-button-design {
   background-color: #afafaf;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
-.ws_req_submit_button, .refresh_button, .acknowledge_button, .popwsreqbut {
+.ws_req_submit_button,
+.refresh_button,
+.acknowledge_button,
+.popwsreqbut {
   background-color: #5cdb5c;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 /* Summary Modal */
@@ -372,11 +390,11 @@
 
 /* Show placeholder on hover */
 .ws_req_form_control:hover::placeholder {
-  color: #aaa; 
+  color: #aaa;
 }
 
 /* Style for readonly fields */
 .ws_req_form_control[readonly] {
-  background-color: #f5f5f5; 
+  background-color: #f5f5f5;
   cursor: not-allowed;
 }
