--- a/c2g1_project/src/styles/trainerhomepage.css
+++ b/c2g1_project/src/styles/trainerhomepage.css
@@ -18,8 +18,6 @@ body {
   grid-template-columns: 1fr 1fr;
   padding: 20px;
   justify-content: center;
-
-
 }
 
 .trainer-home-page-title {
@@ -131,7 +129,7 @@ body {
   padding: 5px;
 }
 
-.breakdown-of-attendance-div{
+.breakdown-of-attendance-div {
   max-width: 1000px;
   width: 500px;
   height: 270px;
@@ -187,7 +185,7 @@ body {
 }
 
 .workshop-stats {
-    margin-top: 20px;
+  margin-top: 20px;
   grid-row-start: 0;
   color: #0672cb;
 }
@@ -198,19 +196,19 @@ body {
   margin-bottom: 10px;
 }
 .admin-graphs {
-    max-width: 1000px;
-    width: 900px;
-    height: 700px;
-    background-color: #e3f2fd;
-    color: #0672cb;
-    border-radius: 20px;
-    /* padding: 10px; */
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 50px;
-    padding: 10px;
+  max-width: 1000px;
+  width: 900px;
+  height: 700px;
+  background-color: #e3f2fd;
+  color: #0672cb;
+  border-radius: 20px;
+  /* padding: 10px; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 50px;
+  padding: 10px;
 }
 
 .form_control {
@@ -224,8 +222,8 @@ body {
 
 .update-hrs-button:hover,
 .graph_buttons:hover {
-  background-color: #0672cb;
-  color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .update-hrs-button,
@@ -247,16 +245,19 @@ body {
   margin: 5px;
   align-self: center;
   margin-top: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .work_hours_row {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px;
-    align-self: center;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  align-self: center;
 }
 
 .admin-graphs h1 {
@@ -268,18 +269,18 @@ body {
 }
 
 .work_hours_num {
-    display: flex;
-    flex-direction: column;
-    width: 10%;
-    height: 30px;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  height: 30px;
+  text-align: center;
 }
 
 .work_hours_desc {
-    display: flex;
-    flex-direction: column;
-    flex-direction: column;
-    width: 85%;
+  display: flex;
+  flex-direction: column;
+  flex-direction: column;
+  width: 85%;
 }
 
 .work_hours_desc h5 {
@@ -288,31 +289,31 @@ body {
 }
 
 .work_hours_desc_area {
-    height: 70px;
-    resize: none;
+  height: 70px;
+  resize: none;
 }
 
 .scrollable_list {
-    padding: 10px;
-    max-height: 1000px;
-    overflow-y: auto; 
-    border: 1px solid #ccc;
-    outline: none;
+  padding: 10px;
+  max-height: 1000px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  outline: none;
 }
 
 .workshop_detail_panel {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    justify-content: space-between;
-    border-radius: 5px;
-    border-width: 0px;
-    background-color: #80c7fb;
-    height: 50px;
-    margin-top: 5px;
-    width: 100%;
-    padding: 0px;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  justify-content: space-between;
+  border-radius: 5px;
+  border-width: 0px;
+  background-color: #80c7fb;
+  height: 50px;
+  margin-top: 5px;
+  width: 100%;
+  padding: 0px;
+  align-items: center;
 }
 
 .workshop_detail_panel span {
@@ -320,11 +321,11 @@ body {
 }
 
 .workshop_detail_panel:hover {
-    background-color: #669fc9;
+  background-color: #669fc9;
 }
 
 .workshop-stats-title {
-    padding: 10px;
+  padding: 10px;
 }
 
 .filter {
@@ -338,4 +339,3 @@ body {
 .filter input {
   margin-right: 20px;
 }
-
